--- a/index.html
+++ b/index.html
@@ -1,49 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/style.css">
   <title>Frontend Mentor | Insure landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <!-- logo -->
+        <div class="logo"> <a href="index.html"><img src="images/logo.svg" alt="insure logo"></a></div>
+        <!-- links -->
+        <nav class="header__links">
+          <ul>
+            <li>How we work</li>
+            <li>Blog</li>
+            <li>Account</li>
+            <li class="header__links_emp"><a class="active-btn" href="#">View plans</a></li>
+          </ul>
+        </nav>
+        <!-- hamburger btn -->
+        <div class="header__hamburger">
+          <img src="images/icon-hamburger.svg" alt="menu">
+        </div>
+      </div>
+    </div>
+  </header>
+  <main>
 
-  How we work
-  Blog
-  Account
-  View plans
+    <section class="hero">
+      <div class="container">
+        <div class="hero__container">
 
-  Humanizing your insurance.
+          <div class="hero__content">
 
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
+            <h1 class="hero__content_heading heading">Humanizing your insurance.</h1>
+            <p class="hero__content_par">Get your life insurance coverage easier and faster. We blend our expertise
+              and technology to help you find the plan that’s right for you. Ensure you
+              and your loved ones are protected.</p>
+            <a class='header__link active-btn' href="#">View plans</a>
 
-  View plans
+          </div>
+          <div class="hero__img"> <img src="images/image-intro-desktop.jpg" alt="family walking holding hands"></div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+
+
+
+
+
+
 
   We’re different
 
   Snappy Process
 
-  Our application process can be completed in minutes, not hours. Don’t get 
+  Our application process can be completed in minutes, not hours. Don’t get
   stuck filling in tedious forms.
 
   Affordable Prices
 
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
+  We don’t want you worrying about high monthly costs. Our prices may be low,
   but we still offer the best coverage possible.
 
   People First
 
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
+  Our plans aren’t full of conditions and clauses to prevent payouts. We make
   sure you’re covered when you need it.
 
   Find out more about how we work
@@ -76,10 +121,11 @@
   Press
   Licenses
 
-  
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/Batareika007" target="_blank">Alexei</a>.
   </div>
 </body>
+
 </html>
