--- a/index.html
+++ b/index.html
@@ -39,15 +39,18 @@
           </ul>
         </nav>
         <!-- hamburger btn -->
-        <div class="header__hamburger">
-          <img src="images/icon-hamburger.svg" alt="menu">
+        <div class="header__hamburger active">
+          <img id="menu-open" src="images/icon-hamburger.svg" alt="menu">
+          <img id="menu-close" style="display:none" src="images/icon-close.svg" alt="menu">
         </div>
       </div>
     </div>
   </header>
+
   <main>
 
     <section class="hero">
+      <img class="decorative-img" src="images/bg-pattern-intro-right-desktop.svg">
       <div class="container">
         <div class="hero__container">
           <!-- hero text -->
@@ -55,11 +58,15 @@
             <h1 class="hero__content_heading heading">Humanizing your insurance.</h1>
             <p class="hero__content_par">Get your life insurance coverage easier and faster. We blend our expertise
               and technology to help you find the plan that’s right for you. Ensure you
-              and your loved ones are protected.</p>
+              and your loved ones&nbsp;are protected.</p>
             <a class='hero__content_link active-btn text-bold' href="#">View plans</a>
           </div>
           <!-- hero main -->
-          <div class="hero__img"> <img src="images/image-intro-desktop.jpg" alt="family walking holding hands"></div>
+          <picture class="hero__img">
+            <source media="(min-width: 769px)" srcset="images/image-intro-desktop.jpg">
+            <source media="(max-width: 768px)" srcset="images/image-intro-mobile.jpg">
+            <img src="images/image-intro-desktop.jpg" alt="family walking holding hands">
+          </picture>
 
 
 
@@ -68,6 +75,7 @@
     </section>
 
     <section class="cards">
+      <img class="decorative-img" src="images/bg-pattern-intro-left-desktop.svg">
       <div class="container">
         <div class="cards__inner">
           <h2 class="cards__inner_heading heading top-line">We’re different</h2>
@@ -112,7 +120,7 @@
     <section class="section">
       <div class="container">
         <div class="section__container">
-          <h2 class="section__heading heading">Find out more about how we work</h2>
+          <h2 class="section__heading heading">Find out more about&nbsp;how&nbsp;we work</h2>
           <a class="section__link active-btn text-bold" href="#">How we work</a>
         </div>
       </div>
@@ -190,8 +198,8 @@
         Coded by <a href="https://www.frontendmentor.io/profile/Batareika007" target="_blank">Alexei</a>.
       </div>
     </div>
-  </footer class="footer">
-
+  </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
